# mkparser

./: .gitignore  Cargo.toml  LICENSE  README.md  index-c96bb813fef9417.js  index.html  tailwind-c2ad05af2583178.css
app/: .gitignore  Cargo.toml  README.md  bonnie.toml  index.html  tailwind.config.js
app/src/: global.css  main.rs  utils.rs
app/src/components/: copy_button.rs  editor.rs  mod.rs  safe_html.rs  select.rs
app/src/hooks/: input.rs  select.rs
