[package]
name = "markdown_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [package.metadata.docs.rs]
# all-features = true
# rustdoc-args = ["--cfg=web_sys_unstable_apis"]
# export RUSTFLAGS=--cfg=web_sys_unstable_apis

[dependencies]
log = "0.4.14"
markdown = "0.3.0"
serde = "1.0.136"
wasm-bindgen-futures = "0.4.29"
wasm-logger = "0.2.0"
yew = "0.20.0"
thiserror = "1.0.30"
reqwasm = "0.5.0"
serde_json = "1.0.79"
yew-hooks = "0.2.0"
gloo-utils = "0.1.6"
emojis = "0.5.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Clipboard",
     "Navigator"
]

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true
